...
                                                </constraints>
                                                <fontDescription key="fontDescription" name="PixelEmulator" family="Pixel Emulator" pointSize="17"/>
                                                <state key="normal" title="PLAY"/>
                                                <connections>
                                                    <action selector="tapPlayButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="sSh-Gg-Pfc"/>
...
                                                        <rect key="frame" x="197" y="0.0" width="177" height="71"/>
                                                        <inset key="titleEdgeInsets" minX="5" minY="0.0" maxX="0.0" maxY="0.0"/>
                                                        <state key="normal" title="START GAME"/>
                                                        <connections>
                                                            <action selector="chooseOKButton:" destination="dLO-La-T2L" eventType="touchUpInside" id="0Yb-lk-wgc"/>
...
                                </constraints>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <state key="normal" title="FOLD"/>
                                <connections>
                                    <action selector="tapFoldButton:" destination="8g6-ZL-prp" eventType="touchUpInside" id="y2G-UE-54G"/>
...
                                    <constraint firstAttribute="height" constant="50" id="zjI-dk-EWS"/>
                                </constraints>
                                <state key="normal" title="OK"/>
                                <connections>
                                    <action selector="tapOKButton:" destination="8g6-ZL-prp" eventType="touchUpInside" id="IbO-bL-HQW"/>
...
                    <connections>
                        <outlet property="OKButton" destination="t0Y-Zg-lKM" id="IiQ-s1-PrW"/>
                        <outlet property="betSlider" destination="Xoo-hM-Aak" id="M5v-aL-uOP"/>
                        <outlet property="callCheckButton" destination="jjh-tY-77Y" id="9i2-AH-YGy"/>
                        <outlet property="card1" destination="Wei-qZ-e9O" id="QBp-Ax-Mo7"/>
...
                        <outlet property="handStateLabel" destination="eVV-UJ-Eha" id="z6N-nE-hY4"/>
                        <outlet property="handStateView" destination="gcU-uN-xww" id="n2r-Yu-0LI"/>
                        <outlet property="homeButton" destination="pJt-1j-c0S" id="Rmg-Yu-oXc"/>
                        <outlet property="infoButton" destination="QNI-bZ-kbO" id="Del-oL-3tc"/>
                        <outlet property="minimumBetLabel" destination="yjd-pA-2ca" id="PhM-6n-C4m"/>
...
                                            <constraint firstAttribute="height" constant="71" id="lrl-wh-BN1"/>
                                        </constraints>
                                        <state key="normal" title="NEW HAND"/>
                                        <connections>
                                            <action selector="tapNewHandButton:" destination="HR1-es-TkA" eventType="touchUpInside" id="k9V-ZM-Thu"/>
...
