...
    }
    
    @IBAction func tapCallCheckButton(_ sender: UIButton) {
        tableData.currentPlayer.playerMadeAMove = true
        
        if tableData.gameState == GameState.preFlop {
            // zachowanie "ALL IN" button:
            if sender.title(for: .normal) == "ALL IN" {
                configureAllInButton()
            } else { // zachowanie "CALL" button:
                configureCallButton()
            }
        } else {
...
    
    @IBAction func tapRaiseBetButton(_ sender: UIButton) {
        if sender.titleLabel?.text == "ALL IN" {
            configureAllInButton()
        } else if sender.titleLabel?.text == "BET" {
            configureBetButton()
        } else { // if button's title is "RAISE":
            configureRaiseButton()
            
//            if betSlider.isHidden == false {
//                return
//            } else {
//                betSlider.isHidden = false
...
